--- a/ml-logistic-regression.ipynb
+++ b/ml-logistic-regression.ipynb
@@ -18,6 +18,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -68,6 +73,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "-Este código carga datos de vinos y se queda solo con los de tipo 1 y 2.\n",
+    "Toma dos medidas (alcohol y cenizas) para usarlas después y convierte los tipos en 0 y 1 para que la computadora entienda.\n",
+    "Al final muestra un ejemplo: coge 10 tipos al azar, los mezcla y enseña cómo los convierte en 0 y 1 de forma automática."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "I also split the data into training and testing sets before going further.  A simple way to do this is with the `train_test_split` function from scikit-learn, which allows me to specify a percentage (here 25%) to sample randomly from the data set and partition away for testing."
    ]
   },
@@ -91,6 +105,13 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25)\n",
     "print('train:', len(X_train), 'test:', len(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-Este código separa automáticamente tus datos en conjunto de entrenamiento (75 %) y conjunto de prueba (25 %) de forma aleatoria, que es el paso estándar antes de entrenar cualquier modelo de machine learning."
    ]
   },
   {
@@ -134,6 +155,13 @@
     "        plt.scatter(points[:,0], points[:,1], marker=marker, color=color)\n",
     "\n",
     "plot_points(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este código define y ejecuta una función que genera un scatter plot 2D de los datos de entrenamiento (X_train) usando las dos características seleccionadas (alcohol en el eje X, ash en el eje Y), coloreando y marcando diferentemente cada clase según su etiqueta binaria en y_train (0 o 1)."
    ]
   },
   {
@@ -194,6 +222,13 @@
     "    \n",
     "    error = sigmoid(X.dot(theta)) - y\n",
     "    return X.T.dot(error) / len(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-El fragmento de código implementa las funciones esenciales de una regresión logística binaria desde cero utilizando únicamente NumPy. La función sigmoid calcula la sigmoide estándar para transformar cualquier valor real en el intervalo (0,1).Estas tres funciones constituyen la base matemática completa necesaria para entrenar un modelo de regresión logística mediante cualquier algoritmo de optimización basado en gradiente (descenso de gradiente, BFGS, etc.) sobre los datos preparados previamente."
    ]
   },
   {
@@ -296,6 +331,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "-El fragmento define la función train que entrena un modelo de regresión logística binaria desde cero sobre los datos de entrada X e y. Primero, inserta una columna de unos en la posición 0 de X (término de bias o intercepto), convirtiendo así la matriz de características en su forma aumentada $\\tilde{X} \\in \\mathbb{R}^{m \\times (n+1)}$. A continuación, inicializa el vector de parámetros $\\theta$ en cero y utiliza el algoritmo de optimización fmin_tnc (Truncated Newton Constrained) de SciPy, que minimiza la función de costo cost empleando el gradiente exacto proporcionado por la función gradient. Los argumentos args=(X, y) pasan los datos aumentados y las etiquetas al par costo/gradiente. El método devuelve el vector de parámetros óptimos $\\theta^*$ que minimiza la entropía cruzada binaria sobre el conjunto de entrenamiento. Finalmente, la llamada theta = train(X_train, y_train) entrena el modelo con los datos de entrenamiento y almacena los parámetros aprendidos, que luego se imprimen. Este procedimiento constituye una implementación completa y vectorizada de regresión logística mediante descenso de gradiente truncado de Newton, sin depender de scikit-learn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Decision Boundaries and Evaluation\n",
     "\n",
     "\n",
@@ -333,6 +375,20 @@
     "print('accuracy:', accuracy_score(y_test, predictions))\n",
     "print('precision:', precision_score(y_test, predictions, average='macro'))\n",
     "print('recall:', recall_score(y_test, predictions, average='macro'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-El programa coge datos de vinos, usa solo alcohol y cenizas para separar dos tipos, dibuja los puntos, crea y entrena un modelo matemático sencillo desde cero, y al final dice qué tan bien acierta al clasificar vinos nuevos. Es un ejemplo básico de clasificación automática con una computadora."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-El código carga el dataset de vinos, selecciona solo las clases 1 y 2, y usa únicamente las variables “alcohol” y “ash” para realizar una clasificación binaria mediante regresión logística implementada completamente desde cero. Divide los datos en entrenamiento y prueba, los visualiza en un gráfico 2D, define la sigmoide, el costo de entropía cruzada y su gradiente de forma vectorizada, entrena el modelo optimizando los parámetros con el método Truncated Newton, predice sobre el conjunto de prueba aplicando umbral 0.5 y, finalmente, muestra accuracy, precision y recall. En resumen, es un ejemplo educativo completo de regresión logística manual con NumPy y SciPy."
    ]
   },
   {
@@ -382,6 +438,15 @@
     "        \n",
     "plot_points(X_train, y_train)\n",
     "plot_boundary(X_train, lambda x: predict(x, theta))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Este código dibuja la línea que el modelo aprendió para separar los dos tipos de vino.\n",
+    "Crea una cuadrícula de puntos en el gráfico, usa el modelo para predecir qué lado pertenece a cada punto y traza una línea negra donde el modelo dice “aquí cambia de un tipo al otro”.\n"
    ]
   }
  ],
