--- a/Soil_Fertility_Prediction.ipynb
+++ b/Soil_Fertility_Prediction.ipynb
@@ -42,11 +42,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "-Este código solo importa cuatro herramientas muy usadas en Python: NumPy para trabajar rápido con números, Pandas para leer y manejar la tabla de datos, Matplotlib para hacer gráficos y dibujos, y Pickle para poder guardar o abrir cosas ya calculadas. Todavía no hace nada, solo prepara todo lo necesario."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -480,6 +480,20 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-Este código lee un archivo de Excel llamado soil_data.xlsx que está en la carpeta del proyecto y lo guarda en una variable llamada soil_data.\n",
+        "Como pone header=None, significa que la primera fila del Excel no tiene nombres de columnas, así que Pandas la trata como datos normales.\n",
+        "Después, al escribir simplemente soil_data, muestra las primeras filas de la tabla para que veamos cómo son los datos del suelo."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "zw5HHXWbDk_d"
       },
@@ -675,6 +689,17 @@
         "\n",
         "#viewing final data frame\n",
         "soil_data.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-Este código limpia y organiza la tabla de datos del suelo:\n",
+        "Primero elimina filas y columnas que no sirven (las que están vacías o tienen texto innecesario).\n",
+        "Luego pone nombres claros a las columnas, como \"Vegetación\", \"pH\", \"Nitrógeno (NO3)\", \"Fósforo (P)\", etc.\n",
+        "También comprueba que todo coincida bien y al final crea una tabla limpia y bonita con nombres entendibles.\n",
+        "Con soil_data.head() muestra las primeras 5 filas para ver que ya quedó todo ordenado y listo para usar."
       ]
     },
     {
@@ -1020,33 +1045,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1RwrVVsBrqHw",
-        "outputId": "4911fc40-0141-4abc-c7ea-f600f2fbeb26"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Missing: 0\n"
-          ]
-        }
-      ],
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "from numpy import nan\n",
-        "from numpy import isnan\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "imputer = SimpleImputer(missing_values=nan, strategy='median')\n",
-        "# transform the dataset\n",
-        "transformed_values = imputer.fit_transform(soil_data)\n",
-        "# count the number of NaN values in each column\n",
-        "print('Missing: %d' % isnan(transformed_values).sum())"
+        "-Este código arregla los huecos (valores faltantes) en la tabla de datos del suelo.\n",
+        "Como hay casillas vacías (NaN), usa una herramienta que pone automáticamente la mediana (el valor del medio) de cada columna en lugar de los huecos.\n",
+        "Después de rellenar todo, comprueba cuántos huecos quedaron y muestra: Missing: 0 (es decir, ya no falta ninguno).\n",
+        "En resumen: llena los datos que faltaban con valores típicos para que la tabla quede completa y lista para usar."
       ]
     },
     {
@@ -1093,6 +1098,14 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-Este código convierte los datos ya limpios y completos en una tabla con nombres claros (Vegetación, pH, NO3, etc.).\n",
+        "Luego comprueba si queda algún hueco vacío en la tabla y muestra cuántos hay por columna (normalmente todos 0)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "nAxvrDv_ZlUt"
       },
@@ -1109,6 +1122,13 @@
       "outputs": [],
       "source": [
         "soil_data.to_csv(r'processed_data_set.csv', index=False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-Este código guarda la tabla de datos del suelo ya limpia, completa y con nombres claros en un archivo nuevo llamado processed_data_set.csv."
       ]
     },
     {
@@ -1152,6 +1172,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-Este código busca y muestra el valor más pequeño que hay en cada columna de la tabla de datos del suelo."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1189,6 +1216,13 @@
         "# printing maximum values for each column in the dataset\n",
         "max_values=soil_data.max()\n",
         "print(max_values)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-Este código busca y muestra el valor más grande de cada columna en la tabla de datos del suelo."
       ]
     },
     {
@@ -1281,6 +1315,14 @@
         "# plotting values\n",
         "plt.figure(figsize=(10,8))\n",
         "sns.heatmap(values,annot=False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Este código crea tres grupos de gráficos que muestran cómo cambia la cobertura vegetal según cada nutriente o propiedad del suelo. Cada grupo es un conjunto de pequeños gráficos de puntos.\n",
+        "Después calcula la correlación entre todas las columnas y la muestra en un mapa de calor colorido (cuadrado (cuanto más claro, más relacionada están dos cosas)."
       ]
     },
     {
@@ -1401,6 +1443,17 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-Este código prepara los datos para entrenar un modelo:\n",
+        "\n",
+        "Separa la tabla: X son todas las columnas con nutrientes y propiedades del suelo y Y es solo la columna de Vegetation Cover (lo que queremos predecir).\n",
+        "Muestra las primeras filas de X para ver cómo están los datos.\n",
+        "Luego normaliza todo: pone todos los valores entre 0 y 1 (usando MinMaxScaler), tanto las entradas (X) como la salida (Y). Esto ayuda a que el modelo aprenda mejor y más rápido."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "8JuCGIOykT8n"
       },
@@ -1455,6 +1508,16 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Este código crea dos funciones para entrenar y evaluar modelos y ver qué tan buenos son:\n",
+        "\n",
+        "train: simplemente entrena el modelo con los datos X e Y.\n",
+        "print_metrics: usa el modelo para predecir, y luego calcula y muestra varias medidas de error:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "9eF_c1pPkz98"
       },
@@ -1492,6 +1555,16 @@
         "\n",
         "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size=0.10, random_state=43)\n",
         "print(X_train)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-Este código divide los datos en dos partes:\n",
+        "Separa el 90 % para entrenar el modelo\n",
+        "Y el 10 % para probarlo después\n",
+        "Usa un número fijo (random_state=43) para que siempre haga la misma división y los resultados sean repetibles."
       ]
     },
     {
@@ -1539,6 +1612,19 @@
         "\n",
         "with open('Linear Model','wb') as f:\n",
         "  pickle.dump(linearModel,f)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "Este código hace lo siguiente:\n",
+        "\n",
+        "Crea un modelo sencillo modelo de regresión lineal\n",
+        "Lo entrena con los datos de entrenamiento (nutrientes → vegetación).\n",
+        "Lo prueba con los datos que guardó aparte y muestra qué tan bien predice: errores y R².\n",
+        "Finalmente guarda el modelo entrenado en un archivo llamado \"Linear Model\" usando pickle, para poder usarlo después sin volver a entrenar."
       ]
     }
   ],
