--- a/Soil_Fertility_Prediction.ipynb
+++ b/Soil_Fertility_Prediction.ipynb
@@ -1561,10 +1561,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "-Este código divide los datos en dos partes:\n",
-        "Separa el 90 % para entrenar el modelo\n",
-        "Y el 10 % para probarlo después\n",
-        "Usa un número fijo (random_state=43) para que siempre haga la misma división y los resultados sean repetibles."
+        "-Este código divide los datos en dos partes, separa el 90 % para entrenar el modelo\n",
+        "Y el 10 % para probarlo después, usa un número fijo, para que siempre haga la misma división y los resultados sean repetibles."
       ]
     },
     {
@@ -1622,7 +1620,7 @@
         "Este código hace lo siguiente:\n",
         "\n",
         "Crea un modelo sencillo modelo de regresión lineal\n",
-        "Lo entrena con los datos de entrenamiento (nutrientes → vegetación).\n",
+        "Lo entrena con los datos de entrenamiento (nutrientes, vegetación).\n",
         "Lo prueba con los datos que guardó aparte y muestra qué tan bien predice: errores y R².\n",
         "Finalmente guarda el modelo entrenado en un archivo llamado \"Linear Model\" usando pickle, para poder usarlo después sin volver a entrenar."
       ]
