--- a/ml-logistic-regression.ipynb
+++ b/ml-logistic-regression.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "source": [
     "-Este código carga datos de vinos y se queda solo con los de tipo 1 y 2.\n",
-    "Toma dos medidas (alcohol y cenizas) para usarlas después y convierte los tipos en 0 y 1 para que la computadora entienda.\n",
+    "Toma dos medidas para usarlas después y convierte los tipos en 0 y 1 para que la computadora entienda.\n",
     "Al final muestra un ejemplo: coge 10 tipos al azar, los mezcla y enseña cómo los convierte en 0 y 1 de forma automática."
    ]
   },
